<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>es.eroski.docproveedoresfyp</groupId>
	<artifactId>docproveedoresfyp</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>Azoka</name>
	<description>Exportacion a pdf de las autofacturas de proveedores</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.2</version> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<spring-boot-admin.version>2.4.0</spring-boot-admin.version>
		<jasper.version>6.16.0</jasper.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>1.4.2.Final</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>1.4.2.Final</version>
		</dependency>

		<dependency>
			<groupId>de.codecentric</groupId>
			<artifactId>spring-boot-admin-starter-client</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>com.h2database</groupId> -->
		<!-- <artifactId>h2</artifactId> -->
		<!-- <scope>runtime</scope> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.6.2</version>
		</dependency>

		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>1.6.2</version>
		</dependency>


		<!-- Oracle -->
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>ojdbc6</artifactId>
			<version>11.2.0.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>



		<!-- Jasper report -->
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>${jasper.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.lowagie</groupId>
					<artifactId>itext</artifactId>
				</exclusion>
				<!-- <exclusion> -->
				<!-- <groupId>com.adobe.xmp</groupId> -->
				<!-- <artifactId>xmpcore</artifactId> -->
				<!-- </exclusion> -->
			</exclusions>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.lowagie/itext -->
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7.js9</version>
		</dependency>


		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports-fonts</artifactId>
			<version>${jasper.version}</version>
		</dependency>

		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports-metadata</artifactId>
			<version>${jasper.version}</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>com.lowagie</groupId> -->
		<!-- <artifactId>itext</artifactId> -->
		<!-- <version>2.1.7</version> -->
		<!-- </dependency> -->

		<!-- https://mvnrepository.com/artifact/com.github.librepdf/openpdf -->
		<!-- <dependency> -->
		<!-- <groupId>com.github.librepdf</groupId> -->
		<!-- <artifactId>openpdf</artifactId> -->
		<!-- <version>1.3.27</version> -->
		<!-- </dependency> -->

		<!-- https://mvnrepository.com/artifact/com.adobe.xmp/xmpcore -->
		<!-- <dependency> -->
		<!-- <groupId>com.adobe.xmp</groupId> -->
		<!-- <artifactId>xmpcore</artifactId> -->
		<!-- <version>6.1.11</version> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>com.adobe.xmp.</groupId> -->
		<!-- <artifactId>xmpcore</artifactId> -->
		<!-- <version>5.1.3</version> -->
		<!-- </dependency> -->
		<!-- Thanks for using https://jar-download.com -->



		<!-- Para trabajar con imagenes svg en los reportes -->
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-bridge</artifactId>
			<version>1.14</version>
		</dependency>

	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-dependencies</artifactId>
				<version>${spring-boot-admin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<!-- <finalName>${project.artifactId}</finalName> -->
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
							<!-- <goal>repackage</goal> -->
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.22</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>1.4.2.Final</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target</outputDirectory>
							<resources>
								<!-- <resource> -->
								<!-- <directory>src/main/resources</directory> -->
								<!-- <includes> -->
								<!-- <include>*.properties</include> -->
								<!-- <include>*.xml</include> -->
								<!-- </includes> -->
								<!-- <filtering>true</filtering> -->
								<!-- </resource> -->
								<resource>
									<directory>src/main/resources</directory>
									<includes>
										<include>*.properties</include>
										<include>*.xml</include>
<!-- 										<include>images/*.svg</include> -->
									</includes>
									<filtering>true</filtering>
								</resource>
								<resource>
									<directory>src/main/resources</directory>
									<includes>
<!-- 										<include>**/*.properties</include> -->
<!-- 										<include>**/*.svg</include> -->
<!-- 										<include>**/*.jrxml</include> -->
										<include>**/*.icc</include>
									</includes>
								</resource>
								
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>
